<resources>
    <string name="app_name">Ietians Diary</string>
    <string name="sign_in_hero_text">Let\'s get you started,\n Sign in below to continue.</string>
    <string name="button_text">Sign In with Google</string>
    <string name="terms_and_conditions_1">*By signing in you agree to our </string>
    <string name="terms_and_conditions_2"><u><![CDATA[terms & conditions]]></u></string>
    <string name="feature_icon">Feature Icon</string>
    <string name="discussion_form_description">Lorem Ipsum is simply dummy \ntext of the printing and \ntypesetting industry.</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="favorites">Favorites</string>
    <string name="account">Account</string>
    <string name="name">Name</string>

    <string name="iet">Hello IET</string>
    <string name="syllabus_description">Lorem Ipsum is \nsimpledummy text.</string>
    <string name="discussion_form">Discussion Forum</string>
    <string name="interview">interviews</string>
    <string name="exams">exams</string>
    <string name="join_now">Join Now</string>
    <string name="new_roadmaps">Roadmaps</string>
    <string name="to_roadmap">toRoadmap</string>
    <string name="to_syllabus">toSyllabus</string>
    <string name="to_studymaterial">toStudyMaterial</string>
    <string name="to_labassignments">toLabAssignments</string>
    <string name="to_internships">toInternships</string>
    <string name="all_features">ALL FEATURES</string>
    <string name="good_morning">Good Morning</string>
    <string name="good_afternoon">Good Afternoon</string>
    <string name="good_evening">Good Evening</string>
    <string name="new_features">NEW FEATURES</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_subject">Select Subject</string>
    <string name="subject_name">Subject Name</string>
    <string name="select_branch">Select Branch</string>
    <string name="select_sem">Select Semester</string>
    <string name="submit">Submit</string>
    <string name="item">Item</string>

</resources>
