<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SignIn">

    <ImageView
        android:id="@+id/heroImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@mipmap/students_1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/signInInstructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_hero_text"
        android:fontFamily="@font/poppins"
        android:textColor="@color/text_black_400"
        android:textAlignment="center"
        android:textSize="18sp"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heroImage"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/dw_signin_button_bg"
        android:text="@string/button_text"
        android:fontFamily="@font/open_sans"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textAllCaps="false"
        android:elevation="0dp"
        app:elevation="0dp"
        android:textColor="@color/text_black_400"
        android:drawableLeft="@raw/google_icon"
        android:drawablePadding="5dp"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInInstructions" />

    <LinearLayout
        android:id="@+id/termsAndConditions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/termsAndConditionsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/terms_and_conditions_1"
            android:textColor="@color/text_black_200"
            android:textSize="11sp"
            android:fontFamily="@font/poppins"
            android:layout_marginBottom="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/termsAndConditionsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="4dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/terms_and_conditions_2"
            android:textColor="@color/text_black_200"
            android:textSize="11sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>