<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingVertical="8dp"
    tools:context=".DashboardFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="50dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:paddingHorizontal="26dp"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvGoodMorning"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/good_morning"
                    android:fontFamily="@font/poppins_medium"
                    android:textColor="@color/text_black_300"
                    android:textSize="20sp"/>

                <ImageView
                    android:id="@+id/ivHello"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    app:layout_constraintTop_toTopOf="@id/tvGoodMorning"
                    app:layout_constraintStart_toEndOf="@+id/tvGoodMorning"
                    app:layout_constraintBottom_toBottomOf="@id/tvGoodMorning"
                    android:src="@drawable/ic_hello_hand"/>

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="wrap_content"
                    android:text="Name"
                    android:textColor="@color/text_black_300"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvGoodMorning"
                    android:fontFamily="@font/poppins_medium"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/textNewFeatures"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/open_sans"
                android:text="@string/new_features"
                android:textAllCaps="true"
                android:layout_marginLeft="26dp"
                android:textColor="@color/text_black_200" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/newFeatures_recyclerView"
                android:clipToPadding="false"
                android:clipChildren="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingHorizontal="26dp"
                android:overScrollMode="never" />

            <TextView
                android:id="@+id/textAllFeatures"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans"
                android:text="@string/all_features"
                android:layout_marginTop="24dp"
                android:layout_marginLeft="26dp"
                android:textAllCaps="true"
                android:textColor="@color/text_black_200" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/allFeatures_recyclerView"
                android:clipToPadding="false"
                android:clipChildren="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingHorizontal="26dp"
                android:overScrollMode="never" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>